fixtures/errors/lex-bad-char/input.fz
fn main() do
  print(`hello)
end
